--- a/index.Rmd
+++ b/index.Rmd
@@ -9,11 +9,9 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Introdution
+## Mise en contexte
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+Il s’agit dans ce travail de prédire les clients qui quitteront la compagnie (churn) à partir de trois types de variables explicatives: variables de comportement comme le nombre de minutes utilisé, le type d’équipement; l’interaction avec la compagnie comme les appels au service à la clientèle; et des données démographiques. Les variables et la tâche à accomplir sont typiques de cette industrie. Même si les données pour ce travail ont été recueillies il y a plusieurs années, elles sont représentatives des mandats d’exploitation de données pour la rétention des clients.
 
 ```{r cars}
 summary(cars)
